Refactor AbstractSequentialExecutionEngine to isolate before and after execute step